--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title> My not first Webpage</title>
+        <title>Fav Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-        <li><a href="recipes/KoreanFriedChicken.html"> Korean Fried Chicken Recipe</a></li>
-        <li><a href="recipes/MisoChickenNoodleSoup.html">Miso Chicken Noodle Soup Recipe</a></li>
-        <li><a href="recipes/PieCrustCookies.html">Pie Crust Cookies Recipe</a></li>
-        </ul>
+        <main>
+            <h1>Odin Recipes</h1>
+            <ul>
+                <li><a href="recipes/KoreanFriedChicken.html">Korean Fried Chicken Recipe</a></li>
+                <li><a href="recipes/MisoChickenNoodleSoup.html">Miso Chicken Noodle Soup Recipe</a></li>
+                <li><a href="recipes/PieCrustCookies.html">Pie Crust Cookies Recipe</a></li>
+            </ul>
+        </main>
     </body>
 </html>
