--- a/recipes/MisoChickenNoodleSoup.html
+++ b/recipes/MisoChickenNoodleSoup.html
@@ -5,31 +5,37 @@
         <title>Miso Chicken Noodle Soup</title>
     </head>
     <body>
-        <h1>Miso Chicken Noodle Soup Recipe</h1>
-        <img src="https://www.allrecipes.com/thmb/f-nCujElZMU1T7FM_KsG2-0QSLA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8748347_Miso-Chicken-Noodle-Soup_TheDailyGourmet_4x3-9f1129c8a23d45d89210fe6def9fc220.jpg" height="500" width="600">
-        <p><strong>Description</strong></p> 
-        <p>This miso chicken noodle soup, with thick, chewy udon noodles and a savory miso broth, is a tasty—and very easy—remake of traditional chicken noodle soup.
-            We just love all of the ways that one can play with a traditional Chicken Noodle Soup and completely transform the flavors. Here, 
-            We’ve combined a good old fashioned Miso Soup with Chicken Noodle Soup to make quite a wonderful concoction of a Miso Chicken Noodle Soup. 
-            It’s simple to make and bursting with flavor and a Chicken Soup that will certainly spice up your weeknight. <p>
-        <p>If you’ve never cooked with Miso Paste, it’s really simple and really does all the work on its own. You can find Miso Paste in the fridge section at your local grocery store, usually near the other refrigerated condiments. 
-            I absolutely love using miso paste in soups, salad dressings, or marinades to add a fabulous element of flavor to everyday dishes. </p>
-        <p><strong>Ingredients</strong></p>
-        <ul>
-            <li>1 1/2 cups water</li>
-            <li>8.5 ounces frozen udon noodles</li>
-            <li>4 ounces rotisserie chicken, shredded</li>
-            <li>1 tablespoon white miso paste</li>
-            <li>Pepper</li>
-            <li>everything bagel seasoning, to taste</li>
-        </ul>
-        <p><strong>Steps</strong></p>
-        <ol>
-            <li>In a saucepan over medium high heat, heat water to boiling. Add udon noodles. Cook until noodles are softened, 4 to 5 minutes.</li>
-            <li>Add rotisserie chicken. Turn heat to low. Remove 2 to 3 tablespoons water, and stir miso paste into water until smooth.</li>
-            <li>Mix diluted miso paste back into noodles. Cook for 2 to 3 minutes.</li>
-            <li>Ladle soup into bowls and garnish with everything bagel seasoning.</li>
-        </ol>
-        <br><a href="../index.html">Home</a>
-        </body>
+        <main>
+            <h1>Miso Chicken Noodle Soup Recipe</h1>
+            <img src="https://www.allrecipes.com/thmb/f-nCujElZMU1T7FM_KsG2-0QSLA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8748347_Miso-Chicken-Noodle-Soup_TheDailyGourmet_4x3-9f1129c8a23d45d89210fe6def9fc220.jpg" >
+            <h3>Description</h3> 
+            <!-- 2 Paragraphs with description of recipe -->
+            <p>This miso chicken noodle soup, with thick, chewy udon noodles and a savory miso broth, is a tasty—and very easy—remake of traditional chicken noodle soup.
+We just love all of the ways that one can play with a traditional Chicken Noodle Soup and completely transform the flavors. Here, 
+We’ve combined a good old fashioned Miso Soup with Chicken Noodle Soup to make quite a wonderful concoction of a Miso Chicken Noodle Soup. 
+It’s simple to make and bursting with flavor and a Chicken Soup that will certainly spice up your weeknight.</p>
+            <p>If you’ve never cooked with Miso Paste, it’s really simple and really does all the work on its own. 
+You can find Miso Paste in the fridge section at your local grocery store, usually near the other refrigerated condiments. 
+I absolutely love using miso paste in soups, salad dressings, or marinades to add a fabulous element of flavor to everyday dishes. </p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 1/2 cups water</li>
+                <li>8.5 ounces frozen udon noodles</li>
+                <li>4 ounces rotisserie chicken, shredded</li>
+                <li>1 tablespoon white miso paste</li>
+                <li>Pepper</li>
+                <li>everything bagel seasoning, to taste</li>
+            </ul>
+            <h3>Steps</h3>
+            <ol>
+                <li>In a saucepan over medium high heat, heat water to boiling. Add udon noodles. Cook until noodles are softened, 4 to 5 minutes.</li>
+                <li>Add rotisserie chicken. Turn heat to low. Remove 2 to 3 tablespoons water, and stir miso paste into water until smooth.</li>
+                <li>Mix diluted miso paste back into noodles. Cook for 2 to 3 minutes.</li>
+                <li>Ladle soup into bowls and garnish with everything bagel seasoning.</li>
+            </ol>
+        </main>
+        <footer>
+            <a href="../index.html">Home</a>
+        </footer>
+    </body>
 </html>
