--- a/recipes/PieCrustCookies.html
+++ b/recipes/PieCrustCookies.html
@@ -5,31 +5,36 @@
         <title>Pie Crust Cookies</title>
     </head>
     <body>
-        <h1>Pie Crust Cookies Recipe</h1>
-        <img src="https://www.allrecipes.com/thmb/8tkMgaDotWTdHrVyxT3TtZuUoUc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/pie-crust-cookies-recipe-8686775fabeverday-44949d825d4d43ea9fc375a0b5227a9e.jpeg" height="500" width="600">
-        <p><strong>Description</strong></p> 
-        <p>These easy pie crust cookies are flaky and buttery, with a delicious cinnamon sugar crust. The cinnamon sugar will make your kitchen smell like fall! Use any shape cookie cutter you like.<p>
-        <p>Leftover pie dough can be quickly transformed into these simple but delicious Pie Crust Cookies! These incredibly easy cookies are as perfect for decorating pies as they are for snacking.</p>
-        <p><strong>Ingredients</strong></p>
-        <ul>
-            <li>1 premade pie crust</li>
-            <li>all purpose flour for dusting</li>
-            <li>1 large egg</li>
-            <li>1 teaspoon whole milk</li>
-            <li>2 tablespoons granulated sugar</li>
-            <li>3/4 teaspoon ground cinnamon</li>
-            <li>1/8 teaspoon kosher salt</li>
-            <li>1 1/2 tablespoons unsalted butter, melted and cooled</li>
-        </ul>
-        <p><strong>Steps</strong></p>
-        <ol>
-            <li>Gather all ingredients. Preheat the oven to 375 degrees F (190 degrees C). Line 2 large rimmed baking sheets with parchment paper; set aside.</li>
-            <li>Roll premade pie crust to 1/8-inch thickness on a lightly floured work surface, and cut using desired cookie cutter shapes.</li>
-            <li>Transfer cut-outs to prepared baking sheets, leaving about a 1/2-inch space between each cookie. Repeat with remaining dough, rerolling scraps once.</li>
-            <li>Whisk together egg and milk in a small bowl until combined. Using a pastry brush, brush the tops of each cookie evenly with egg mixture; discard remaining egg mixture. Whisk together sugar, cinnamon, and salt in a small bowl until evenly combined, sprinkle evenly over brushed cookies.</li>
-            <li>Bake cookies, one baking sheet at a time, in the preheated oven until the edges and bottoms of cookies just become golden brown, about 15 minutes.</li>
-            <li>Remove from oven and brush tops of each cookie lightly with melted butter, let cool slightly on baking sheet, about 5 minutes. Serve warm.</li>
-        </ol>
-        <br><a href="../index.html">Home</a>
-        </body>
+        <main>
+            <h1>Pie Crust Cookies Recipe</h1>
+            <img src="https://www.allrecipes.com/thmb/8tkMgaDotWTdHrVyxT3TtZuUoUc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/pie-crust-cookies-recipe-8686775fabeverday-44949d825d4d43ea9fc375a0b5227a9e.jpeg">
+            <h3>Description</h3>
+            <!-- 2 Paragraphs with description of recipe -->
+            <p>These easy pie crust cookies are flaky and buttery, with a delicious cinnamon sugar crust. The cinnamon sugar will make your kitchen smell like fall! Use any shape cookie cutter you like.</p>
+            <p>Leftover pie dough can be quickly transformed into these simple but delicious Pie Crust Cookies! These incredibly easy cookies are as perfect for decorating pies as they are for snacking.</p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 premade pie crust</li>
+                <li>all purpose flour for dusting</li>
+                <li>1 large egg</li>
+                <li>1 teaspoon whole milk</li>
+                <li>2 tablespoons granulated sugar</li>
+                <li>3/4 teaspoon ground cinnamon</li>
+                <li>1/8 teaspoon kosher salt</li>
+                <li>1 1/2 tablespoons unsalted butter, melted and cooled</li>
+            </ul>
+            <h3>Steps</h3>
+            <ol>
+                <li>Gather all ingredients. Preheat the oven to 375 degrees F (190 degrees C). Line 2 large rimmed baking sheets with parchment paper; set aside.</li>
+                <li>Roll premade pie crust to 1/8-inch thickness on a lightly floured work surface, and cut using desired cookie cutter shapes.</li>
+                <li>Transfer cut-outs to prepared baking sheets, leaving about a 1/2-inch space between each cookie. Repeat with remaining dough, rerolling scraps once.</li>
+                <li>Whisk together egg and milk in a small bowl until combined. Using a pastry brush, brush the tops of each cookie evenly with egg mixture; discard remaining egg mixture. Whisk together sugar, cinnamon, and salt in a small bowl until evenly combined, sprinkle evenly over brushed cookies.</li>
+                <li>Bake cookies, one baking sheet at a time, in the preheated oven until the edges and bottoms of cookies just become golden brown, about 15 minutes.</li>
+                <li>Remove from oven and brush tops of each cookie lightly with melted butter, let cool slightly on baking sheet, about 5 minutes. Serve warm.</li>
+            </ol>
+        </main>
+        <footer>
+            <a href="../index.html">Home</a>
+        </footer>
+    </body>
 </html>
